# ghcitui

./: CHANGELOG.md  CONTRIBUTING.md  INSTALL.rst  LICENSE  MANUAL.rst  README.md  cabal.project  default.nix  fourmolu.yaml  fswatch_build.sh  ghcitui.cabal  regenerate_help.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: haskell.yaml
app/: AppConfig.hs  AppInterpState.hs  AppState.hs  AppTopLevel.hs  BrickUI.hs  DrawSourceViewer.hs  Events.hs  HelpText.hs  Main.hs  SourceWindow.hs  SplashTextEmbed.hs  Util.hs
assets/: splash.txt  splash_alt.txt
lib/: Daemon.hs  Loc.hs  NameBinding.hs  ParseContext.hs  StringUtil.hs  Tui.hs  Util.hs
lib/Ghcid/: Daemon.hs  ParseContext.hs
lib/Ghcitui/: Loc.hs  NameBinding.hs  Util.hs
lib/Ghcitui/Ghcid/: Daemon.hs  LogConfig.hs  ParseContext.hs  StartupConfig.hs
lib/ghcitui-brick/Ghcitui/: Brick.hs
lib/ghcitui-brick/Ghcitui/Brick/: AppConfig.hs  AppInterpState.hs  AppState.hs  AppTopLevel.hs  BrickUI.hs  DrawSourceViewer.hs  EventUtils.hs  Events.hs  HelpText.hs  InterpWindowEvents.hs  SourceWindow.hs  SourceWindowEvents.hs  SplashTextEmbed.hs
lib/ghcitui-core/Ghcitui/: Loc.hs  NameBinding.hs  Util.hs
lib/ghcitui-core/Ghcitui/Ghcid/: Daemon.hs  LogConfig.hs  ParseContext.hs  ParseError.hs  ParseTabCompletions.hs  StartupConfig.hs
test/: LocSpec.hs  ParseContextSpec.hs  Spec.hs  UtilSpec.hs
