cabal-version:      2.4
name:               ghcitui
version:            0.1.0.0
synopsis:           A Terminal User Interface (TUI) for GHCi

description:
  A visual interface for GHCi debug mode inside the terminal.

  Features:
    * A source view window, with debug keybindings.
    * Live variable bindings.
    * Live loaded modules.
    * An GHCi session in the current context.

bug-reports:        https://github.com/CrystalSplitter/ghcitui
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jordan 'CrystalSplitter' R AW
maintainer:         gamewhizzit@gmail.com
-- A copyright notice.
-- copyright:
category: Debug
extra-source-files: CHANGELOG.md
                    , LICENSE

source-repository head
    type:       git
    location:   https://github.com/CrystalSplitter/ghcitui

executable ghcitui
    main-is:            Main.hs
    build-depends:      base >= 4.17 && < 5
                        , brick
                        , containers
                        , errors
                        , ghcitui-lib
                        , microlens ^>= 0.4.13.1
                        , optparse-applicative ^>= 0.18.1.0
                        , safe ^>= 0.3.19
                        , text
                        , text-zipper ^>= 0.13
                        , vty ^>= 5.38
                        , word-wrap ^>= 0.5
    hs-source-dirs:     app
    other-modules:      BrickUI
                        , AppState
                        , AppTopLevel
                        , Util
                        , AppInterpState
                        , AppConfig
                        , Events
    ghc-options:        -rtsopts
                        -threaded
                        -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Wredundant-constraints
    default-language:   Haskell2010
    default-extensions: DuplicateRecordFields
                        LambdaCase
                        OverloadedRecordDot
                        OverloadedStrings
                        RecordWildCards
                        TupleSections

library ghcitui-lib
    hs-source-dirs:     lib
    build-depends:      base >= 4.17 && < 5
                        , array ^>= 0.5.4.0
                        , containers ^>= 0.6.7
                        , errors ^>= 2.3.0
                        , ghcid ^>= 0.8.8
                        , regex-base ^>= 0.94.0.2
                        , regex-tdfa ^>= 1.3.2.1
                        , safe ^>= 0.3.19
                        , string-interpolate ^>= 0.3.2.1
                        , text ^>= 2.0.2
                        , transformers ^>= 0.6.1.0
    exposed-modules:    Ghcid.Daemon
                        , Ghcid.ParseContext
                        , Loc
                        , Util
                        , NameBinding
    ghc-options:        -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Wredundant-constraints
    default-language:   Haskell2010
    default-extensions: OverloadedRecordDot
                        DuplicateRecordFields
                        OverloadedStrings
                        RecordWildCards
                        TupleSections

test-suite spec
    hs-source-dirs:     test
    main-is:            Spec.hs
    type:               exitcode-stdio-1.0
    build-depends:      base >= 4.17 && < 5
                        , hspec ^>= 2.11.5
                        , ghcitui-lib
    other-modules:      LocSpec
                        , UtilSpec
    default-language:   Haskell2010
