cabal-version:      2.4
name:               ghcitui
version:            0.0.1.0
synopsis:           A Terminal User Interface (TUI) for GHCi

description:
  A terminal user interface for GHCi debug mode.
  .
  Features:
  .
  * A source view window, with debug keybindings.
  .
  * Live variable bindings.
  .
  * Live loaded modules.
  .
  * Visible trace history.
  .
  * An GHCi session in the current context.

bug-reports:        https://github.com/CrystalSplitter/ghcitui
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jordan 'CrystalSplitter' R AW
maintainer:         crystal@crystalwobsite.gay
copyright:          Jordan R AW
category:           Debug
extra-source-files: LICENSE
                    , assets/splash.txt
                    , gen/MANUAL.txt
extra-doc-files: CHANGELOG.md
                 , MANUAL.rst
                 , README.md
                 , docs/assets/20240116_splash.png

source-repository head
    type:       git
    location:   https://github.com/CrystalSplitter/ghcitui

executable ghcitui
    main-is:            Main.hs
    build-depends:      base
                        , ghcitui-brick
                        , optparse-applicative ^>= 0.18.1.0
                        , ghcitui
                        , text
    hs-source-dirs:     app
    other-modules:      Paths_ghcitui
    autogen-modules:    Paths_ghcitui
    ghc-options:        -rtsopts
                        -threaded
                        -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Wredundant-constraints
    default-language:   Haskell2010
    default-extensions: MonoLocalBinds
                        OverloadedStrings
                        RecordWildCards

library
    hs-source-dirs:     lib/ghcitui-core
    build-depends:      base >= 4.17 && < 5
                        , array ^>= 0.5.4.0
                        , containers >= 0.6.7 && < 0.8
                        , errors ^>= 2.3.0
                        , ghcid ^>= 0.8.8
                        , regex-base ^>= 0.94.0.2
                        , regex-tdfa ^>= 1.3.2.1
                        , safe ^>= 0.3.19
                        , string-interpolate ^>= 0.3.2.1
                        , text ^>= 2.0.2
                        , transformers ^>= 0.6.1.0
    exposed-modules:    Ghcitui.Ghcid.Daemon
                        , Ghcitui.Ghcid.LogConfig
                        , Ghcitui.Ghcid.ParseContext
                        , Ghcitui.Loc
                        , Ghcitui.NameBinding
                        , Ghcitui.Util
    other-modules:      Ghcitui.Ghcid.StartupConfig
    ghc-options:        -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Wredundant-constraints
    default-language:   Haskell2010
    default-extensions: DuplicateRecordFields
                        MonoLocalBinds
                        NamedFieldPuns
                        OverloadedRecordDot
                        OverloadedStrings
                        RecordWildCards
                        TupleSections

library ghcitui-brick
    hs-source-dirs:     lib/ghcitui-brick
    build-depends:      base >= 4.17 && < 5
                        , brick >= 2.2 && < 2.4
                        , containers >= 0.6.7 && < 0.8
                        , errors ^>= 2.3.0
                        , file-embed ^>= 0.0.15
                        , ghcitui
                        , microlens ^>= 0.4.13.1
                        , microlens-th ^>= 0.4.3.14
                        , safe ^>= 0.3.19
                        , text ^>= 2.0.2
                        , text-zipper ^>= 0.13
                        , vector ^>= 0.13.1.0
                        , vty >= 5.38 && < 6.1
                        , word-wrap ^>= 0.5
    exposed-modules:    Ghcitui.Brick
    other-modules:      Ghcitui.Brick.AppConfig
                        , Ghcitui.Brick.AppInterpState
                        , Ghcitui.Brick.AppState
                        , Ghcitui.Brick.AppTopLevel
                        , Ghcitui.Brick.BrickUI
                        , Ghcitui.Brick.DrawSourceViewer
                        , Ghcitui.Brick.Events
                        , Ghcitui.Brick.HelpText
                        , Ghcitui.Brick.SourceWindow
                        , Ghcitui.Brick.SplashTextEmbed
    ghc-options:        -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Wredundant-constraints
    default-language:   Haskell2010
    default-extensions: DuplicateRecordFields
                        LambdaCase
                        MonoLocalBinds
                        NamedFieldPuns
                        OverloadedRecordDot
                        OverloadedStrings
                        RecordWildCards
                        TupleSections


test-suite spec
    hs-source-dirs:     test
    main-is:            Spec.hs
    type:               exitcode-stdio-1.0
    build-depends:      base >= 4.17 && < 5
                        , ghcitui
                        , hspec ^>= 2.11.5
    other-modules:      LocSpec
                        , UtilSpec
    default-language:   Haskell2010
